samples/_failures_safe/1761175352_1ed250_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1369daa.c: In function ‘main’:
./samples/SAFE/__tmp_a1369daa.c:168: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_a1369daa.c:167:9: error: expected declaration or statement at end of input
  167 |         if
      |         ^~
./samples/SAFE/__tmp_a1369daa.c:167:9: error: expected declaration or statement at end of input
